--- a/D3 Scales/index.html
+++ b/D3 Scales/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="chart"></div>
+    <div id="chart">
+    </div>
 
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="app.js"></script>
