added animation to bar chart

--- a/D3 Scales/BarChart/index.html
+++ b/D3 Scales/BarChart/index.html
@@ -6,8 +6,9 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="chart">
-    </div>
+    <div id="chart"></div>
+    <hr>
+    <button type="button">Update</button>
 
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="app.js"></script>
