adding & removing data from bar chart

--- a/D3 Scales/BarChart/index.html
+++ b/D3 Scales/BarChart/index.html
@@ -8,7 +8,9 @@
 <body>
     <div id="chart"></div>
     <hr>
-    <button type="button">Update</button>
+    <button type="button" class="update">Update</button>
+    <button type="button" class="add">Add</button>
+    <button type="button" class="remove">Remove</button>
 
     <script src="https://d3js.org/d3.v5.js"></script>
     <script src="app.js"></script>
