--- a/D3 Scales/BarChart/index.html
+++ b/D3 Scales/BarChart/index.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <div id="chart"></div>
+    <div id="chart">
+        <div id="tooltip">
+            
+        </div>
+    </div>
     <hr>
     <button type="button" class="update">Update</button>
     <button type="button" class="add">Add</button>
